# urobot

./: AUTHORS  ChangeLog  README.md
controller/: .classpath  .project  AndroidManifest.xml  README.md
controller/res/layout-land/: content_browser.xml  content_item.xml  robot.xml  videoviewtest.xml
controller/res/layout-port/: list_item_icon_text.xml  playaudio.xml  playimage.xml  playvideo.xml  robot.xml  videoviewtest.xml
controller/res/values/: bools.xml  strings.xml
controller/res/values-ko/: strings.xml
controller/res/values-land/: bools.xml
controller/src/org/urobot/controller/: BrowseActivity.java  BrowserUpnpService.java  CamView.java  DemoActivity.java  JoystickClickedListener.java  JoystickMovedListener.java  JoystickView.java  MainActivity.java  MultipartJpegInputStream.java  RobotActivity.java  Sensors.java  SwitchPower.java  URobotServiceId.java
controller/src/org/urobot/media/: ContentActivity.java  ContentBrowserAdapter.java  ContentList.java  ContentNode.java  PlayAudioActivity.java  PlayImageActivity.java  PlayVideoActivity.java  ViewVideoActivity.java
controller/src/org/urobot/util/: FixedAndroidHandler.java
server/: CMakeLists.txt  README.md
server/cmake/: cmake_uninstall.cmake.in
server/cmake/Modules/: FindCtemplate.cmake  FindKobukiDriver.cmake  FindLibUpnp.cmake  FindRpi.cmake
server/include/: buffer.h  cam.h  cam_old.h  cfgparser.h  cms.h  css.h  device.h  http.h  joystick.h  mcs.h  osdep.h  presentation.h  services.h  sms.h  sts.h  target.h  trace.h  urobot.h  utils.h
server/include/devices/: cambuf.h  car.h  jpeg_utils.h  kinect.h  kobuki.h  openni_kinect.h  raspberrypi.h  roomba.h  streamer.h  uvc.h  v4l2uvc.h
server/src/: CMakeLists.txt  buffer.c  cam.c  cfgparser.c  cms.c  config.h.in  css.c  devices.c  http.c  mcs.c  osdep.c  presentation.c  services.c  sms.c  sts.c  template.cpp  trace.c  urobot.1  urobot.c  urobot.conf
server/src/devices/: input_kinect.cpp  input_uvc.c  jpeg_utils.c  kobuki.cpp  output_streamer.c  raspberrypi.c  roomba.c  v4l2uvc.c  virtual_car.c
server/src/hybus/: Makefile  car_lib.h  httpd.c  httpd.h  hybus.c  hybus.h  input.h  input_pxa.c  jpeg_utils.c  jpeg_utils.h  output.h  output_http.c  pxa_camera_zl.h  pxavideo.h  v4l2pxa.c  v4l2pxa.h
server/src/kobuki/: CMakeLists.txt  kinecttest.cpp  turtlebot2.cpp
server/src/linux/: CMakeLists.txt  linuxuvc.c
server/src/raspberrypi/: CMakeLists.txt  rpi.c  testrpi.c
server/src/turtlebot/: CMakeLists.txt  input.h  input_kinect.cpp  kinecttest.cpp  roombatest.c  turtlebot.c  turtlebot.h
